--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@ body {
   .topnav {
     overflow: hidden;
     background-color: blue;
-  }
+   }
   
   .topnav a {
     float: left;
@@ -15,4 +15,14 @@ body {
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+  }
+
+  .topnav a:hover {
+    background-color: white;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #4CAF50;
+    color: white;
   }
